<resources>
    <string name="app_name">Quiz Pro</string>
    <string name="question_one">1. How many States are there in the India ?</string>
    <string name="o1">29</string>
    <string name="o2">28</string>
    <string name="o3">27</string>
    <string name="none_of_these">None of these</string>
    <string name="question_two">2. From which book Indian National Anthem is taken ?</string>
    <string name="motorola">Panchtantra</string>
    <string name="microsoft">jan-gan-man</string>
    <string name="bell_laboratories">Gitanjali</string>
    <string name="ashton_tate">Three Mistakes of my life</string>
    <string name="question_three">3. Under which king the following Stambha was built ?</string>
    <string name="abacus">Akbar</string>
    <string name="analytical_engine">Ashoka</string>
    <string name="calculator">Sivaji</string>
    <string name="processor">Maharana Pratap</string>
    <string name="question_four">4. What is India\'s official name</string>
    <string name="gate">India</string>
    <string name="motherboard">Aryavart</string>
    <string name="chip">Bharat</string>
    <string name="cpu">Hindusthan</string>
    <string name="question_five">5. Which port city was the first Portuguese colony in India?</string>
    <string name="_2005">Ahmadabad</string>
    <string name="_2006">Patna</string>
    <string name="_2007">Goa</string>
    <string name="_2008">Kochi</string>
    <string name="question_six">6. Who was the founder of the Brahmo Samaj?</string>
    <string name="oracle">Vivekanand</string>
    <string name="sun">Raja Ram Mohan Roy</string>
    <string name="apple">Vidyasagar</string>
    <string name="question_seven">7. Tick all colors present in Indian Flag</string>
    <string name="steve_jobs">Saffron</string>
    <string name="steve_wozniak">White</string>
    <string name="ronald_wayne">Greeen</string>
    <string name="larry_ellison">Select first 3</string>
    <string name="question_eight">8. Which are Indian States</string>
    <string name="a">Arunachal Pradesh</string>
    <string name="b">Bihar</string>
    <string name="c">Chhattisgarh</string>
    <string name="d">Punjab</string>
    <string name="question_nine">9. Complete the sentence - Jo tera hai wo mera  ____</string>
    <string name="answer">Answer</string>
    <string name="question_ten">10. The name of this quiz app is</string>
    <string name="submit">Submit</string>
</resources>
