<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:src="@drawable/quiz"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#10729D"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical"
            android:text="@string/question_one"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#91e2da"
            android:layout_marginBottom="30dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o1"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/o3"/>
                <RadioButton
                    android:id="@+id/one_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none_of_these"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ff5821"
            android:textColor="#FFFFFF"
            android:text="@string/question_two"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffaa8e"
            android:layout_marginBottom="30dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motorola"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/microsoft"/>

                <RadioButton
                    android:id="@+id/two_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bell_laboratories"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ashton_tate"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="#4286f4"
            android:textColor="#FFFFFF"
            android:text="@string/question_three"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/ashoka"
            android:scaleType="fitXY"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#b5d4ff"
            android:layout_marginBottom="30dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abacus"/>
                <RadioButton
                    android:id="@+id/three_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/analytical_engine"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculator"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/processor"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#009688"
            android:textColor="#FFFFFF"
            android:text="@string/question_four"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#B2DFDB"
            android:layout_marginBottom="30dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gate"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/motherboard"/>
                <RadioButton
                    android:id="@+id/four_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpu"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#F44336"
            android:textColor="#FFFFFF"
            android:text="@string/question_five"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF8A80"
            android:layout_marginBottom="30dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2005"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2006"/>
                <RadioButton
                    android:id="@+id/five_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2007"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2008"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#9C27B0"
            android:textColor="#FFFFFF"
            android:text="@string/question_six"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#CE93D8"
            android:layout_marginBottom="30dp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oracle"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/microsoft"/>
                <RadioButton
                    android:id="@+id/six_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sun"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apple"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#23A638"
            android:textColor="#FFFFFF"
            android:text="@string/question_seven"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#bcffed"
            android:layout_marginBottom="20dp">
            <CheckBox
                android:id="@+id/seven_answer_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steve_jobs"/>
            <CheckBox
                android:id="@+id/seven_answer_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steve_wozniak"/>
            <CheckBox
                android:id="@+id/seven_answer_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ronald_wayne"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/larry_ellison"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#4286f4"
            android:textColor="#FFFFFF"
            android:text="@string/question_eight"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#EDE7F6"
            android:layout_marginBottom="30dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"/>
            <CheckBox
                android:id="@+id/eight_answer_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b"/>
            <CheckBox
                android:id="@+id/eight_answer_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c"/>
            <CheckBox
                android:id="@+id/eight_answer_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#f3ff56"
            android:textColor="#000000"
            android:text="@string/question_nine"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/nine_answer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f9ffb2"
            android:hint="@string/answer"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#fc460f"
            android:textColor="#000000"
            android:text="@string/question_ten"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/ten_answer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#ffd3c6"
            android:hint="@string/answer"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/submit"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/submit"
            android:scaleType="centerCrop"
            android:onClick="calculateScore"/>

    </LinearLayout>
</ScrollView>
